--- a/webcrawlling/2.도서목록추출.ipynb
+++ b/webcrawlling/2.도서목록추출.ipynb
@@ -741,119 +741,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "d57b8097",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class Book:\n",
-    "    def __init__(self, title, author, price):\n",
-    "        self.title = title\n",
-    "        self.author = author\n",
-    "        self.price = price\n",
-    "\n",
-    "    # 객체를 출력했을 때 예쁘게 보이게 하는 기능\n",
-    "    def __repr__(self):\n",
-    "        return f\"Book(제목: {self.title}, 저자: {self.author}, 가격: {self.price})\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "id": "8c59bb01",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 전체 책 객체를 담을 리스트\n",
-    "book_objects = []\n",
-    "\n",
-    "# (이전 크롤링 코드 내부라고 가정)\n",
-    "for item in items:\n",
-    "    title = item.select_one('div.info_row.info_name > a.gd_name').text.strip()\n",
-    "    author = item.select_one('span.info_auth > a').text.strip()\n",
-    "    price = item.select_one('strong.txt_num > em').text.strip()\n",
-    "    \n",
-    "    # [핵심] Book 클래스의 인스턴스 생성\n",
-    "    new_book = Book(title, author, price)\n",
-    "    \n",
-    "    # 객체를 리스트에 추가\n",
-    "    book_objects.append(new_book)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "id": "ee06b451",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[Book(제목: 2026 이유진 국어 백일기도 모의고사 [承(승)_시간단축], 저자: 이유진, 가격: 25,200),\n",
-       " Book(제목: 정답은 있다, 저자: 이정효, 가격: 16,200),\n",
-       " Book(제목: 뇌는 어떻게 나를 조종하는가, 저자: 크리스 나이바우어, 가격: 16,920),\n",
-       " Book(제목: 새들이 전하는 짧은 철학, 저자: 필리프 J. 뒤부아, 가격: 15,300),\n",
-       " Book(제목: 2026 이유진 국어 백일기도 모의고사 [轉(전) 극한훈련], 저자: 이유진, 가격: 25,200),\n",
-       " Book(제목: 눈과 돌멩이, 저자: 위수정, 가격: 16,200),\n",
-       " Book(제목: 어머니의 집밥을 먹을 수 있는 횟수는 328번 남았습니다, 저자: 우와노 소라, 가격: 15,120),\n",
-       " Book(제목: 반짝반짝 1학년, 학교는 널 기다려!, 저자: 전영신, 가격: 13,050),\n",
-       " Book(제목: 손자병법, 저자: 손자, 가격: 11,700),\n",
-       " Book(제목: 김재우의 기초 영어회화 100, 저자: 김재우, 가격: 17,010),\n",
-       " Book(제목: 메이지의 영원한 삶을 위해, 저자: 크리스토퍼 엣지, 가격: 11,700),\n",
-       " Book(제목: 존리의 부자되기 습관, 저자: 존리, 가격: 18,000),\n",
-       " Book(제목: 해커스 토익 RC Reading(리딩) 기본서, 저자: David Cho, 가격: 16,920),\n",
-       " Book(제목: 비실비실 선생님 11, 저자: 후쿠치 카미오, 가격: 5,400),\n",
-       " Book(제목: 초판본 데미안, 저자: 헤르만 헤세, 가격: 1,980),\n",
-       " Book(제목: AI 시대 십 대를 위한 논어, 저자: 최태규, 가격: 16,920),\n",
-       " Book(제목: 총 균 쇠, 저자: 재레드 다이아몬드, 가격: 26,820),\n",
-       " Book(제목: 두근두근 1학년, 우리는 널 사랑해!, 저자: 전영신, 가격: 13,050),\n",
-       " Book(제목: 몬스터 캠핑장, 저자: 정주영, 가격: 12,600),\n",
-       " Book(제목: 말뚝들, 저자: 김홍, 가격: 15,120),\n",
-       " Book(제목: 어린이 같은 말 다른 뜻 사전, 저자: 박세랑, 가격: 16,020),\n",
-       " Book(제목: 2026 위포트 공기업 NCS 통합기본서 (PSAT형+모듈형+피듈형+실전 모의고사), 저자: 위포트 연구소, 가격: 24,300),\n",
-       " Book(제목: 기분이 태도가 되지 않게 (헬로키티 에디션), 저자: 레몬심리, 가격: 16,200),\n",
-       " Book(제목: 불변의 법칙, 저자: 모건 하우절, 가격: 22,500)]"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "book_objects"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "id": "2d237e69",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                                  제목          저자      가격\n",
-      "0  2026 이유진 국어 백일기도 모의고사 [承(승)_시간단축]         이유진  25,200\n",
-      "1                             정답은 있다         이정효  16,200\n",
-      "2                    뇌는 어떻게 나를 조종하는가   크리스 나이바우어  16,920\n",
-      "3                      새들이 전하는 짧은 철학  필리프 J. 뒤부아  15,300\n",
-      "4  2026 이유진 국어 백일기도 모의고사 [轉(전) 극한훈련]         이유진  25,200\n"
-     ]
-    }
-   ],
-   "source": [
-    "# 객체의 __dict__ 속성을 이용해 한 번에 변환\n",
-    "df = pd.DataFrame([b.__dict__ for b in book_objects])\n",
-    "\n",
-    "# 열 이름을 한글로 바꾸고 싶다면\n",
-    "df.columns = ['제목', '저자', '가격']\n",
-    "print(df.head())"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 34,
    "id": "57ffa925",
    "metadata": {},
@@ -1057,6 +944,189 @@
     "# 3. 결과 확인\n",
     "df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "af6dfa0b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "데이터프레임 생성 및 CSV 저장 완료!\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.to_csv('yes24_final.csv', index=False, encoding='utf-8-sig')\n",
+    "print(\"데이터프레임 생성 및 CSV 저장 완료!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "12ecb59c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SQLite DB 저장 완료! 'yes24_books.db' 파일을 확인하세요.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sqlite3\n",
+    "\n",
+    "# 1. DB 연결 (파일이 없으면 새로 생성됩니다)\n",
+    "conn = sqlite3.connect('yes24_books.db')\n",
+    "cur = conn.cursor()\n",
+    "\n",
+    "# 2. 테이블 생성 (기존에 있다면 삭제 후 생성)\n",
+    "cur.execute('DROP TABLE IF EXISTS books')\n",
+    "cur.execute('''\n",
+    "    CREATE TABLE books (\n",
+    "        id INTEGER PRIMARY KEY AUTOINCREMENT,\n",
+    "        title TEXT,\n",
+    "        author TEXT,\n",
+    "        price TEXT\n",
+    "    )\n",
+    "''')\n",
+    "\n",
+    "# 3. 데이터 삽입 (Book 객체 리스트 활용)\n",
+    "# executemany를 사용하면 한 번에 많은 데이터를 빠르게 넣을 수 있습니다.\n",
+    "data_to_insert = [(b.title, b.author, b.price) for b in book_objects]\n",
+    "\n",
+    "cur.executemany('''\n",
+    "    INSERT INTO books (title, author, price) \n",
+    "    VALUES (?, ?, ?)\n",
+    "''', data_to_insert)\n",
+    "\n",
+    "# 4. 변경사항 저장(Commit) 및 연결 종료\n",
+    "conn.commit()\n",
+    "conn.close()\n",
+    "\n",
+    "print(\"SQLite DB 저장 완료! 'yes24_books.db' 파일을 확인하세요.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "a4a89f90",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   id                             title  author   price\n",
+      "0   1                        나의 완벽한 장례식     조현선  17,100\n",
+      "1   2                       진보를 위한 주식투자     이광수  19,800\n",
+      "2   3                      박곰희 연금 부자 수업     박곰희  18,900\n",
+      "3   4                     괴테는 모든 것을 말했다  스즈키 유이  15,300\n",
+      "4   5  ETS 토익 정기시험 기출문제집 1000 Vol. 5 RC     ETS  19,800\n"
+     ]
+    }
+   ],
+   "source": [
+    "conn = sqlite3.connect('yes24_books.db')\n",
+    "df_from_db = pd.read_sql('SELECT * FROM books', conn)\n",
+    "conn.close()\n",
+    "\n",
+    "print(df_from_db.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "f3a15f01",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pymysql.connections.Connection at 0x1d243e2cf10>"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pymysql\n",
+    "conn = pymysql.connect(\n",
+    "  host='localhost',\n",
+    "  user='root',\n",
+    "  password='1234',\n",
+    "  db='book_db',\n",
+    "  charset='utf8mb4'\n",
+    ")\n",
+    "conn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "c3aedae8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "144개의 데이터를 DB에 저장했습니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    with conn.cursor() as cursor:\n",
+    "        # 2. 테이블 생성\n",
+    "        cursor.execute('''\n",
+    "            CREATE TABLE IF NOT EXISTS books (\n",
+    "                id INT AUTO_INCREMENT PRIMARY KEY,\n",
+    "                title VARCHAR(255),\n",
+    "                author VARCHAR(255),\n",
+    "                price VARCHAR(50)\n",
+    "            )\n",
+    "        ''')\n",
+    "        \n",
+    "        # 3. 데이터 삽입 (이미 수집한 book_objects가 있다고 가정)\n",
+    "        sql = \"INSERT INTO books (title, author, price) VALUES (%s, %s, %s)\"\n",
+    "        \n",
+    "        # executemany를 위해 리스트 형태로 변환\n",
+    "        data_to_insert = [(b.title, b.author, b.price) for b in book_objects]\n",
+    "        \n",
+    "        cursor.executemany(sql, data_to_insert)\n",
+    "        \n",
+    "    # 4. 변경사항 최종 반영\n",
+    "    conn.commit()\n",
+    "    print(f\"{len(data_to_insert)}개의 데이터를 DB에 저장했습니다.\")\n",
+    "\n",
+    "finally:\n",
+    "    # 5. 연결 종료 (에러가 나도 꼭 닫아줘야 함)\n",
+    "    conn.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e5a6190c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "88658bec",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
