--- a/webcrawlling/5.img.ipynb
+++ b/webcrawlling/5.img.ipynb
@@ -17,10 +17,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "e700021c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ 페이지를 성공적으로 불러왔습니다!\n",
+      "현재 상영 중인 영화 20개를 발견했습니다.\n",
+      "\n",
+      "1위: 왕과 사는 남자\n",
+      "🔗 포스터 주소: https://www.moviechart.co.kr/thumb?width=178&height=267&m_code=20242837&source=https://admin.moviechart.co.kr/assets/upload/movie/260108003526_8322.jpg\n",
+      "--------------------------------------------------\n",
+      "2위: 휴민트\n",
+      "🔗 포스터 주소: https://www.moviechart.co.kr/thumb?width=178&height=267&m_code=20241266&source=https://admin.moviechart.co.kr/assets/upload/movie/260112024651_6301.jpg\n",
+      "--------------------------------------------------\n",
+      "3위: 초속 5센티미터\n",
+      "🔗 포스터 주소: https://www.moviechart.co.kr/thumb?width=178&height=267&m_code=20259583&source=https://admin.moviechart.co.kr/assets/upload/movie/260213052538_7190.jpg\n",
+      "--------------------------------------------------\n",
+      "4위: 너자 2\n",
+      "🔗 포스터 주소: https://www.moviechart.co.kr/thumb?width=178&height=267&m_code=20261181&source=https://admin.moviechart.co.kr/assets/upload/movie/260202063756_4036.jpg\n",
+      "--------------------------------------------------\n",
+      "5위: 슬라이드 스트럼 뮤트\n",
+      "🔗 포스터 주소: https://www.moviechart.co.kr/thumb?width=178&height=267&m_code=20261450&source=https://admin.moviechart.co.kr/assets/upload/movie/260219042530_2928.jpg\n",
+      "--------------------------------------------------\n",
+      "6위: 넘버원\n",
+      "🔗 포스터 주소: https://www.moviechart.co.kr/thumb?width=178&height=267&m_code=20252373&source=https://admin.moviechart.co.kr/assets/upload/movie/260123065552_5690.jpg\n",
+      "--------------------------------------------------\n",
+      "7위: 햄넷\n",
+      "🔗 포스터 주소: https://www.moviechart.co.kr/thumb?width=178&height=267&m_code=20250365&source=https://admin.moviechart.co.kr/assets/upload/movie/260202063420_3704.jpg\n",
+      "--------------------------------------------------\n",
+      "8위: 부흥\n",
+      "🔗 포스터 주소: https://www.moviechart.co.kr/thumb?width=178&height=267&m_code=20250052&source=https://admin.moviechart.co.kr/assets/upload/movie/251217050458_3005.jpg\n",
+      "--------------------------------------------------\n",
+      "9위: 매드 댄스 오피스\n",
+      "🔗 포스터 주소: https://www.moviechart.co.kr/thumb?width=178&height=267&m_code=20241501&source=https://admin.moviechart.co.kr/assets/upload/movie/260211005123_8631.jpg\n",
+      "--------------------------------------------------\n",
+      "10위: 신의악단\n",
+      "🔗 포스터 주소: https://www.moviechart.co.kr/thumb?width=178&height=267&m_code=20247457&source=https://admin.moviechart.co.kr/assets/upload/movie/251120010139_4577.jpg\n",
+      "--------------------------------------------------\n",
+      "11위: 28년 후: 뼈의 사원\n",
+      "🔗 포스터 주소: https://www.moviechart.co.kr/thumb?width=178&height=267&m_code=20257744&source=https://admin.moviechart.co.kr/assets/upload/movie/260224060300_8541.jpg\n",
+      "--------------------------------------------------\n",
+      "12위: 렌탈 패밀리: 가족을 빌려드립니다\n",
+      "🔗 포스터 주소: https://www.moviechart.co.kr/thumb?width=178&height=267&m_code=20261308&source=https://admin.moviechart.co.kr/assets/upload/movie/260210013009_5300.jpg\n",
+      "--------------------------------------------------\n",
+      "13위: 몬테크리스토 백작\n",
+      "🔗 포스터 주소: https://www.moviechart.co.kr/thumb?width=178&height=267&m_code=20261053&source=https://admin.moviechart.co.kr/assets/upload/movie/260129041152_8249.jpg\n",
+      "--------------------------------------------------\n",
+      "14위: 호퍼스\n",
+      "🔗 포스터 주소: https://www.moviechart.co.kr/thumb?width=178&height=267&m_code=20256283&source=https://admin.moviechart.co.kr/assets/upload/movie/260223062542_7108.jpg\n",
+      "--------------------------------------------------\n",
+      "15위: 만약에 우리\n",
+      "🔗 포스터 주소: https://www.moviechart.co.kr/thumb?width=178&height=267&m_code=20249255&source=https://admin.moviechart.co.kr/assets/upload/movie/251204005803_1038.jpg\n",
+      "--------------------------------------------------\n",
+      "16위: 프랑켄슈타인\n",
+      "🔗 포스터 주소: https://www.moviechart.co.kr/thumb?width=178&height=267&m_code=20258285&source=https://admin.moviechart.co.kr/assets/upload/movie/251028081202_6162.jpg\n",
+      "--------------------------------------------------\n",
+      "17위: 폭풍의 언덕\n",
+      "🔗 포스터 주소: https://www.moviechart.co.kr/thumb?width=178&height=267&m_code=20257823&source=https://admin.moviechart.co.kr/assets/upload/movie/260129002056_4590.jpg\n",
+      "--------------------------------------------------\n",
+      "18위: 점보\n",
+      "🔗 포스터 주소: https://www.moviechart.co.kr/thumb?width=178&height=267&m_code=20261150&source=https://admin.moviechart.co.kr/assets/upload/movie/260205010355_9240.jpg\n",
+      "--------------------------------------------------\n",
+      "19위: 아기 티라노 디보: 초식이지만 괜찮아!\n",
+      "🔗 포스터 주소: https://www.moviechart.co.kr/thumb?width=178&height=267&m_code=20261323&source=https://admin.moviechart.co.kr/assets/upload/movie/260223060627_5598.jpg\n",
+      "--------------------------------------------------\n",
+      "20위: 직사각형, 삼각형\n",
+      "🔗 포스터 주소: https://www.moviechart.co.kr/thumb?width=178&height=267&m_code=20258795&source=https://admin.moviechart.co.kr/assets/upload/movie/260119014802_6002.jpg\n",
+      "--------------------------------------------------\n"
+     ]
+    }
+   ],
    "source": [
     "# 1. 대상 URL과 헤더 설정\n",
     "url = \"https://www.moviechart.co.kr/rank/realtime/index/image\"\n",
@@ -48,7 +118,7 @@
     "    for i, movie in enumerate(movies, 1):\n",
     "        # 4. 제목 추출 \n",
     "        # li 태그 내부에서 제목이 있는 클래스나 태그를 찾습니다.\n",
-    "        title_tag = movie.select_one(\".title a\")\n",
+    "        title_tag = movie.select_one(\"h3\")\n",
     "        title = title_tag.get_text(strip=True) if title_tag else \"제목 정보 없음\"\n",
     "\n",
     "        # 5. 이미지 URL 추출\n",
@@ -70,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "c3e73f12",
    "metadata": {},
    "outputs": [
@@ -78,27 +148,49 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "    순위   영화제목                                              포스터링크\n",
-      "0    1  제목 없음  https://www.moviechart.co.kr/thumb?width=178&h...\n",
-      "1    2  제목 없음  https://www.moviechart.co.kr/thumb?width=178&h...\n",
-      "2    3  제목 없음  https://www.moviechart.co.kr/thumb?width=178&h...\n",
-      "3    4  제목 없음  https://www.moviechart.co.kr/thumb?width=178&h...\n",
-      "4    5  제목 없음  https://www.moviechart.co.kr/thumb?width=178&h...\n",
-      "5    6  제목 없음  https://www.moviechart.co.kr/thumb?width=178&h...\n",
-      "6    7  제목 없음  https://www.moviechart.co.kr/thumb?width=178&h...\n",
-      "7    8  제목 없음  https://www.moviechart.co.kr/thumb?width=178&h...\n",
-      "8    9  제목 없음  https://www.moviechart.co.kr/thumb?width=178&h...\n",
-      "9   10  제목 없음  https://www.moviechart.co.kr/thumb?width=178&h...\n",
-      "10  11  제목 없음  https://www.moviechart.co.kr/thumb?width=178&h...\n",
-      "11  12  제목 없음  https://www.moviechart.co.kr/thumb?width=178&h...\n",
-      "12  13  제목 없음  https://www.moviechart.co.kr/thumb?width=178&h...\n",
-      "13  14  제목 없음  https://www.moviechart.co.kr/thumb?width=178&h...\n",
-      "14  15  제목 없음  https://www.moviechart.co.kr/thumb?width=178&h...\n",
-      "15  16  제목 없음  https://www.moviechart.co.kr/thumb?width=178&h...\n",
-      "16  17  제목 없음  https://www.moviechart.co.kr/thumb?width=178&h...\n",
-      "17  18  제목 없음  https://www.moviechart.co.kr/thumb?width=178&h...\n",
-      "18  19  제목 없음  https://www.moviechart.co.kr/thumb?width=178&h...\n",
-      "19  20  제목 없음  https://www.moviechart.co.kr/thumb?width=178&h...\n"
+      "    순위                   영화제목  \\\n",
+      "0    1               왕과 사는 남자   \n",
+      "1    2                    휴민트   \n",
+      "2    3               초속 5센티미터   \n",
+      "3    4                   너자 2   \n",
+      "4    5            슬라이드 스트럼 뮤트   \n",
+      "5    6                    넘버원   \n",
+      "6    7                     햄넷   \n",
+      "7    8                     부흥   \n",
+      "8    9              매드 댄스 오피스   \n",
+      "9   10                   신의악단   \n",
+      "10  11           28년 후: 뼈의 사원   \n",
+      "11  12     렌탈 패밀리: 가족을 빌려드립니다   \n",
+      "12  13              몬테크리스토 백작   \n",
+      "13  14                    호퍼스   \n",
+      "14  15                 만약에 우리   \n",
+      "15  16                 프랑켄슈타인   \n",
+      "16  17                 폭풍의 언덕   \n",
+      "17  18                     점보   \n",
+      "18  19  아기 티라노 디보: 초식이지만 괜찮아!   \n",
+      "19  20              직사각형, 삼각형   \n",
+      "\n",
+      "                                                포스터링크  \n",
+      "0   https://www.moviechart.co.kr/thumb?width=178&h...  \n",
+      "1   https://www.moviechart.co.kr/thumb?width=178&h...  \n",
+      "2   https://www.moviechart.co.kr/thumb?width=178&h...  \n",
+      "3   https://www.moviechart.co.kr/thumb?width=178&h...  \n",
+      "4   https://www.moviechart.co.kr/thumb?width=178&h...  \n",
+      "5   https://www.moviechart.co.kr/thumb?width=178&h...  \n",
+      "6   https://www.moviechart.co.kr/thumb?width=178&h...  \n",
+      "7   https://www.moviechart.co.kr/thumb?width=178&h...  \n",
+      "8   https://www.moviechart.co.kr/thumb?width=178&h...  \n",
+      "9   https://www.moviechart.co.kr/thumb?width=178&h...  \n",
+      "10  https://www.moviechart.co.kr/thumb?width=178&h...  \n",
+      "11  https://www.moviechart.co.kr/thumb?width=178&h...  \n",
+      "12  https://www.moviechart.co.kr/thumb?width=178&h...  \n",
+      "13  https://www.moviechart.co.kr/thumb?width=178&h...  \n",
+      "14  https://www.moviechart.co.kr/thumb?width=178&h...  \n",
+      "15  https://www.moviechart.co.kr/thumb?width=178&h...  \n",
+      "16  https://www.moviechart.co.kr/thumb?width=178&h...  \n",
+      "17  https://www.moviechart.co.kr/thumb?width=178&h...  \n",
+      "18  https://www.moviechart.co.kr/thumb?width=178&h...  \n",
+      "19  https://www.moviechart.co.kr/thumb?width=178&h...  \n"
      ]
     }
    ],
@@ -120,7 +212,7 @@
     "    movie_results = []\n",
     "\n",
     "    for i, movie in enumerate(movies, 1):\n",
-    "        title_tag = movie.select_one(\".title a\")\n",
+    "        title_tag = movie.select_one(\"h3\")\n",
     "        title = title_tag.get_text(strip=True) if title_tag else \"제목 없음\"\n",
     "\n",
     "        img_tag = movie.select_one(\"a > img\")\n",
