--- a/ml/2.모델링.ipynb
+++ b/ml/2.모델링.ipynb
@@ -5288,7 +5288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "id": "1e25a410",
    "metadata": {},
    "outputs": [],
@@ -5299,6 +5299,38 @@
     "X_train_scaled = scaler.fit_transform(X_train)\n",
     "X_test_scaled = scaler.transform(X_test)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "b7ca0959",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wine_LR_Clf_scaled = LogisticRegression(max_iter=36)\n",
+    "wine_LR_Clf_scaled.fit(X_train_scaled,y_train)\n",
+    "wine_LR_predict_scaled = wine_LR_Clf_scaled.predict(X_test_scaled)\n",
+    "accuracy_score(y_test, wine_LR_predict_scaled)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "de2a4cf5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
