--- a/ml/2.모델링.ipynb
+++ b/ml/2.모델링.ipynb
@@ -5184,7 +5184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 88,
    "id": "79851497",
    "metadata": {},
    "outputs": [],
@@ -5195,7 +5195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 89,
    "id": "6726313b",
    "metadata": {},
    "outputs": [
@@ -5205,7 +5205,7 @@
        "((142, 13), (36, 13), (142,), (36,))"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5217,7 +5217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 90,
    "id": "e86aec94",
    "metadata": {},
    "outputs": [
@@ -5242,22 +5242,22 @@
        "0.9722222222222222"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from sklearn.linear_model import LogisticRegression\n",
-    "wine_LR_Clf = LogisticRegression(max_iter=100)\n",
-    "wine_LR_Clf.fit(X_train, y_train)\n",
-    "wine_LR_predict = wine_LR_Clf.predict(X_test)\n",
-    "accuracy_score(y_test, wine_LR_predict)"
+    "wine_lr_clf = LogisticRegression(max_iter=100)\n",
+    "wine_lr_clf.fit(X_train, y_train)\n",
+    "wine_lr_pred = wine_lr_clf.predict(X_test)\n",
+    "accuracy_score(y_test, wine_lr_pred)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 91,
    "id": "2d8a276b",
    "metadata": {},
    "outputs": [
@@ -5269,13 +5269,13 @@
        "       [ 0,  0,  7]])"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "confusion_matrix(y_test, wine_LR_predict)"
+    "confusion_matrix(y_test, wine_lr_pred)"
    ]
   },
   {
@@ -5288,7 +5288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 92,
    "id": "1e25a410",
    "metadata": {},
    "outputs": [],
@@ -5302,7 +5302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 93,
    "id": "b7ca0959",
    "metadata": {},
    "outputs": [
@@ -5312,16 +5312,16 @@
        "1.0"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "wine_LR_Clf_scaled = LogisticRegression(max_iter=36)\n",
-    "wine_LR_Clf_scaled.fit(X_train_scaled,y_train)\n",
-    "wine_LR_predict_scaled = wine_LR_Clf_scaled.predict(X_test_scaled)\n",
-    "accuracy_score(y_test, wine_LR_predict_scaled)"
+    "wine_lr_clf_scaled = LogisticRegression(max_iter=36)\n",
+    "wine_lr_clf_scaled.fit(X_train_scaled,y_train)\n",
+    "wine_lr_pred_scaled = wine_lr_clf_scaled.predict(X_test_scaled)\n",
+    "accuracy_score(y_test, wine_lr_pred_scaled)"
    ]
   },
   {
