--- a/ml/2.모델링.ipynb
+++ b/ml/2.모델링.ipynb
@@ -5325,12 +5325,52 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "33669c2c",
+   "metadata": {},
+   "source": [
+    "모델링 프로세스는 동일하다.\n",
+    "- 각 모델의 하이퍼파라미터가 다르다."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "de2a4cf5",
+   "execution_count": 94,
+   "id": "4a072fb2",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "id": "de2a4cf5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "KNN모델의 정확도 : 1.00000\n",
+      "RF모델의 정확도 : 0.97222\n",
+      "LR모델의 정확도 : 1.00000\n"
+     ]
+    }
+   ],
+   "source": [
+    "models = {\n",
+    "  'KNN' : KNeighborsClassifier(),\n",
+    "  'RF' : RandomForestClassifier(),\n",
+    "  'LR' : LogisticRegression()\n",
+    "}\n",
+    "for name , model in models.items():\n",
+    "  model.fit(X_train_scaled, y_train)\n",
+    "  y_pred = model.predict(X_test_scaled)\n",
+    "  print(f'{name}모델의 정확도 : {accuracy_score(y_test, y_pred):.5f}')"
+   ]
   },
   {
    "cell_type": "code",
