--- a/ml/7_보험로예측.ipynb
+++ b/ml/7_보험로예측.ipynb
@@ -301,13 +301,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "63e1b11a",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#bmi의 널처리"
+    "## bmi의 널처리"
    ]
   },
   {
@@ -363,20 +361,318 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "54c6e326",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## 문자열 데이터의 수치화 > LabelEncoder"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0a325598",
+   "execution_count": 18,
+   "id": "2b74b5ff",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.preprocessing import LabelEncoder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "0a325598",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>bmi</th>\n",
+       "      <th>children</th>\n",
+       "      <th>smoker</th>\n",
+       "      <th>region</th>\n",
+       "      <th>charges</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>19</td>\n",
+       "      <td>0</td>\n",
+       "      <td>27.900</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>16884.92400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>18</td>\n",
+       "      <td>1</td>\n",
+       "      <td>33.770</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1725.55230</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>28</td>\n",
+       "      <td>1</td>\n",
+       "      <td>33.000</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4449.46200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>33</td>\n",
+       "      <td>1</td>\n",
+       "      <td>22.705</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>21984.47061</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>32</td>\n",
+       "      <td>1</td>\n",
+       "      <td>28.880</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3866.85520</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   age  sex     bmi  children  smoker  region      charges\n",
+       "0   19    0  27.900         0       1       3  16884.92400\n",
+       "1   18    1  33.770         1       0       2   1725.55230\n",
+       "2   28    1  33.000         3       0       2   4449.46200\n",
+       "3   33    1  22.705         0       0       1  21984.47061\n",
+       "4   32    1  28.880         0       0       1   3866.85520"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "col_list = ['sex', 'smoker', 'region']\n",
+    "for col in col_list :\n",
+    "  enc = LabelEncoder()\n",
+    "  df[col] = enc.fit_transform(df[col])\n",
+    "\n",
+    "df.head()\n",
+    "  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4d7b6cce",
+   "metadata": {},
+   "source": [
+    "## 스케일링 하기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "00342a94",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = df.iloc[:,:-1]\n",
+    "y = df.iloc[:,-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "2d69a78d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "a685e2bf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "scaler = MinMaxScaler()\n",
+    "X_train_scaled = scaler.fit_transform(X_train)\n",
+    "X_test_scaled = scaler.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "d7af1b46",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count     1338.000000\n",
+       "mean     13270.422265\n",
+       "std      12110.011237\n",
+       "min       1121.873900\n",
+       "25%       4740.287150\n",
+       "50%       9382.033000\n",
+       "75%      16639.912515\n",
+       "max      63770.428010\n",
+       "Name: charges, dtype: float64"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['charges'].describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "4839208a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "# charges 제외! bmi만 스케일링\n",
+    "scale_cols = ['bmi']\n",
+    "\n",
+    "scaler = StandardScaler()\n",
+    "\n",
+    "X_train[scale_cols] = scaler.fit_transform(X_train[scale_cols])\n",
+    "X_test[scale_cols] = scaler.transform(X_test[scale_cols])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "375b317d",
+   "metadata": {},
+   "source": [
+    "# 선형회귀"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "ba032dd2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4172.783193083617,\n",
+       " 33640928.3211508,\n",
+       " np.float64(5800.0800271333155),\n",
+       " 0.7833094802263592)"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score\n",
+    "lr_model = LinearRegression()\n",
+    "lr_model.fit(X_train, y_train)\n",
+    "y_pred = lr_model.predict(X_test)\n",
+    "mae = mean_absolute_error(y_test, y_pred)\n",
+    "mse = mean_squared_error(y_test, y_pred)\n",
+    "rmse = np.sqrt(mse)\n",
+    "r2 = r2_score(y_test, y_pred)\n",
+    "mae, mse, rmse, r2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f7065647",
+   "metadata": {},
+   "source": [
+    "# 다항회귀"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "cd785e71",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import PolynomialFeatures\n",
+    "from sklearn.pipeline import Pipeline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "f981a283",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Degree:2, Mae:2740.6271, MSE:20737594.4176, RMSE:4553.8549, R^2: 0.8664\n",
+      "Degree:3, Mae:2818.6301, MSE:21577598.7166, RMSE:4645.1694, R^2: 0.8610\n",
+      "Degree:4, Mae:3120.6621, MSE:34379524.8383, RMSE:5863.4056, R^2: 0.7786\n"
+     ]
+    }
+   ],
+   "source": [
+    "degree = [2,3,4]\n",
+    "\n",
+    "for deg in degree :\n",
+    "  model_poly = Pipeline( [('poly', PolynomialFeatures(degree=deg, include_bias=False)), ('linear', LinearRegression())])\n",
+    "  model_poly.fit(X_train, y_train)\n",
+    "  poly_pred = model_poly.predict(X_test)\n",
+    "  \n",
+    "  mae = mean_absolute_error(y_test, poly_pred)\n",
+    "  mse = mean_squared_error(y_test, poly_pred)\n",
+    "  rmse = np.sqrt(mse)\n",
+    "  r2 = r2_score(y_test, poly_pred)\n",
+    "  print (f'Degree:{deg}, Mae:{mae:.4f}, MSE:{mse:.4f}, RMSE:{rmse:.4f}, R^2: {r2:.4f}')"
+   ]
   }
  ],
  "metadata": {
