--- a/ml/7_보험로예측.ipynb
+++ b/ml/7_보험로예측.ipynb
@@ -673,6 +673,60 @@
     "  r2 = r2_score(y_test, poly_pred)\n",
     "  print (f'Degree:{deg}, Mae:{mae:.4f}, MSE:{mse:.4f}, RMSE:{rmse:.4f}, R^2: {r2:.4f}')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "a735d847",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2499.0538510119104,\n",
+       " 21474275.29598436,\n",
+       " np.float64(4634.034451316084),\n",
+       " 0.861678255985478)"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "model_rf = RandomForestRegressor(n_estimators=100, random_state=0)\n",
+    "model_rf.fit(X_train, y_train)\n",
+    "y_pred_rf = model_rf.predict(X_test)\n",
+    "mae = mean_absolute_error(y_test, y_pred_rf)\n",
+    "mse = mean_squared_error(y_test, y_pred_rf)\n",
+    "rmse = np.sqrt(mse)\n",
+    "r2 = r2_score(y_test, y_pred_rf)\n",
+    "mae, mse, rmse, r2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "bdb14dc4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.13626757, 0.00692881, 0.2079445 , 0.02268396, 0.61074257,\n",
+       "       0.01543259])"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model_rf.feature_importances_"
+   ]
   }
  ],
  "metadata": {
