--- a/ml/7_보험로예측.ipynb
+++ b/ml/7_보험로예측.ipynb
@@ -2,8 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "9f838503",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "9506849c",
    "metadata": {},
    "outputs": [
@@ -182,7 +181,7 @@
        "[1338 rows x 7 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "6f5d791b",
    "metadata": {},
    "outputs": [
@@ -259,7 +258,7 @@
        "581   19  male  30.59         0     no  northwest  1639.5631"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "a47ceff3",
    "metadata": {},
    "outputs": [
@@ -285,7 +284,7 @@
       "---  ------    --------------  -----  \n",
       " 0   age       1338 non-null   int64  \n",
       " 1   sex       1338 non-null   str    \n",
-      " 2   bmi       1338 non-null   float64\n",
+      " 2   bmi       1333 non-null   float64\n",
       " 3   children  1338 non-null   int64  \n",
       " 4   smoker    1338 non-null   str    \n",
       " 5   region    1338 non-null   str    \n",
@@ -310,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "78ef16cb",
    "metadata": {},
    "outputs": [
@@ -327,7 +326,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -339,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "id": "acc7353a",
    "metadata": {},
    "outputs": [
@@ -351,7 +350,7 @@
        "Length: 4, dtype: str"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "id": "2b74b5ff",
    "metadata": {},
    "outputs": [],
@@ -380,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "id": "0a325598",
    "metadata": {},
    "outputs": [
@@ -478,7 +477,7 @@
        "4   32    1  28.880         0       0       1   3866.85520"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -503,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "id": "00342a94",
    "metadata": {},
    "outputs": [],
@@ -514,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "id": "2d69a78d",
    "metadata": {},
    "outputs": [],
@@ -525,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "id": "a685e2bf",
    "metadata": {},
    "outputs": [],
@@ -538,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 12,
    "id": "d7af1b46",
    "metadata": {},
    "outputs": [
@@ -556,7 +555,7 @@
        "Name: charges, dtype: float64"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -567,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 13,
    "id": "4839208a",
    "metadata": {},
    "outputs": [],
@@ -593,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 14,
    "id": "ba032dd2",
    "metadata": {},
    "outputs": [
@@ -606,7 +605,7 @@
        " 0.7833094802263592)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -634,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 15,
    "id": "cd785e71",
    "metadata": {},
    "outputs": [],
@@ -645,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 16,
    "id": "f981a283",
    "metadata": {},
    "outputs": [
@@ -676,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 17,
    "id": "a735d847",
    "metadata": {},
    "outputs": [
@@ -689,7 +688,7 @@
        " 0.861678255985478)"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -708,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 18,
    "id": "bdb14dc4",
    "metadata": {},
    "outputs": [
@@ -719,7 +718,7 @@
        "       0.01543259])"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -727,11 +726,49 @@
    "source": [
     "model_rf.feature_importances_"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "97aebdc6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "--- 특성 중요도 ---\n",
+      "    feature  importance\n",
+      "4    smoker    0.610743\n",
+      "2       bmi    0.207945\n",
+      "0       age    0.136268\n",
+      "3  children    0.022684\n",
+      "5    region    0.015433\n",
+      "1       sex    0.006929\n"
+     ]
+    }
+   ],
+   "source": [
+    "feature_names = ['age', 'sex', 'bmi', 'children', 'smoker', 'region']\n",
+    "importance_df = pd.DataFrame({'feature':feature_names, 'importance':model_rf.feature_importances_}).sort_values('importance', ascending=False)\n",
+    "\n",
+    "print('\\n--- 특성 중요도 ---')\n",
+    "print(importance_df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7c4e15e6",
+   "metadata": {},
+   "source": [
+    "## XGRegressor"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ml_edu",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
